--- a/styles.html
+++ b/styles.html
@@ -234,6 +234,35 @@
             </div> <!-- end row -->
 
             <div class="row">
+                <div class="column lg-12">
+                    <h3>Statistics</h3>
+                </div>
+            </div>
+
+            <div class="row block-lg-one-fourth block-tab-one-half block-stack s-about__stats">
+
+                <div class="column s-about__stats-item">
+                    <div class="s-about__stats-count">554<span>k</span></div>
+                    <h5>Total Downloads</h5>
+                </div>
+                <div class="column s-about__stats-item">
+                    <div class="s-about__stats-count">22<span>k</span></div>
+                    <h5>Daily Visitors</h5>
+                </div>
+                <div class="column s-about__stats-item">
+                    <div class="s-about__stats-count">99<span>%</span></div>
+                    <h5>Positive Rating</h5>
+                </div>
+                <div class="column s-about__stats-item">
+                    <div class="s-about__stats-count">526<span>k</span></div>
+                    <h5>Happy Users</h5>
+                </div>
+
+            </div> <!-- end stats -->
+
+            <hr>
+
+            <div class="row">
 
                 <div class="column lg-6 tab-12">
 
