--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <meta name="theme-color" content="#ffffff">
 
     <style>
+        :root {
+            --color-1-rgb: 63, 136, 92;
+        }
+
         .s-about__screens-slider {
             width: 100%;
             margin: 0 auto;
@@ -186,121 +190,6 @@
                 font-size: 1.8rem;
             }
         }
-
-        /* Cookie Banner Styling */
-        .cookie-banner {
-            position: fixed;
-            bottom: 3rem;
-            left: 3rem;
-            max-width: 420px;
-            background: rgba(10, 10, 10, 0.95);
-            backdrop-filter: blur(15px);
-            color: #ffffff;
-            padding: 3.2rem;
-            border-radius: 24px;
-            z-index: 9999;
-            transform: translateY(150%);
-            transition: transform 0.8s cubic-bezier(0.16, 1, 0.3, 1);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
-            box-sizing: border-box;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .cookie-banner.show {
-            transform: translateY(0);
-        }
-
-        .cookie-banner h4 {
-            color: #ffffff;
-            margin-top: 0;
-            margin-bottom: 1.2rem;
-            font-size: 1.9rem;
-            font-weight: 700;
-            letter-spacing: -0.02em;
-        }
-
-        .cookie-banner p {
-            font-size: 1.45rem;
-            line-height: 1.6;
-            margin-bottom: 2.8rem;
-            color: rgba(255, 255, 255, 0.65);
-        }
-
-        .cookie-banner__buttons {
-            display: flex;
-            gap: 1.2rem;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        .cookie-banner__btn {
-            flex: 1;
-            padding: 1.4rem;
-            border-radius: 12px;
-            font-size: 1.3rem;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-            cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border: none;
-            text-align: center;
-            white-space: nowrap;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-sizing: border-box;
-        }
-
-        .cookie-banner__btn--accept {
-            background-color: var(--color-1);
-            color: #ffffff;
-        }
-
-        .cookie-banner__btn--accept:hover {
-            background-color: var(--color-1-dark);
-            transform: translateY(-2px);
-        }
-
-        .cookie-banner__btn--decline {
-            background-color: rgba(255, 255, 255, 0.05);
-            color: #ffffff;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .cookie-banner__btn--decline:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            border-color: rgba(255, 255, 255, 0.2);
-        }
-
-        .cookie-banner__btn--decline:hover {
-            border-color: #ffffff;
-        }
-
-        @media screen and (max-width: 600px) {
-            .cookie-banner {
-                left: 1.5rem;
-                right: 1.5rem;
-                bottom: 1.5rem;
-                max-width: none;
-            }
-        }
-
-        /* Sticky Header Button Styling */
-        .s-header.sticky .s-header__cta .btn--stroke {
-            background-color: var(--color-1) !important;
-            border-color: var(--color-1) !important;
-            color: #ffffff !important;
-        }
-
-        .s-header.sticky .s-header__cta .btn--stroke:hover {
-            background-color: var(--color-1-dark) !important;
-            border-color: var(--color-1-dark) !important;
-            color: #ffffff !important;
-        }
     </style>
 
 </head>
@@ -344,13 +233,13 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#pricing" class="smoothscroll">Pricing</a></li>
                         <li><a href="#faq" class="smoothscroll">FAQ</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="news.html">News</a></li>
                         <li><a href="legal.html">Terms</a></li>
                     </ul>
                 </nav>
 
                 <div class="s-header__cta">
-                    <a href="#contact" class="btn btn--stroke s-header__cta-btn smoothscroll">Contact us</a>
+                    <a href="#contact" class="btn btn--primary s-header__cta-btn smoothscroll">Contact us</a>
                 </div>
 
             </div> <!-- end s-header__inner -->
@@ -1324,7 +1213,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="news.html">News</a></li>
                         <li><a href="legal.html">Terms</a></li>
                     </ul>
 
@@ -1357,30 +1246,49 @@
             </div>
         </div>
 
+        <!-- Promo Widget -->
+        <div id="promo-widget" class="promo-widget">
+            <div class="promo-widget__close" onclick="minimizePromo()">
+                <svg viewBox="0 0 24 24">
+                    <path
+                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                </svg>
+            </div>
+            <div class="promo-widget__icon-header">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" />
+                </svg>
+            </div>
+            <h4>Ready for a Digital Upgrade?</h4>
+            <p>
+                Stop dreaming about it. Whether you need a slick website or a mobile app that works, let's make it real.
+            </p>
+            <a href="https://creativfolio.com" target="_blank" class="promo-widget__btn">
+                Visit Creativfolio
+            </a>
+
+            <div class="promo-news">
+                <span class="promo-news__title">Latest News</span>
+                <div id="promo-news-container">
+                    <p style="font-size: 1.2rem; color: rgba(255,255,255,0.5);">Loading latest updates...</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Promo Trigger Icon -->
+        <div id="promo-trigger" class="promo-trigger" onclick="showPromo()">
+            <svg viewBox="0 0 24 24">
+                <path
+                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z" />
+            </svg>
+        </div>
+
         <!-- Java Script
     ================================================== -->
         <script src="js/plugins.js"></script>
         <script src="js/config.js"></script>
+        <script src="js/promo.js"></script>
         <script src="js/main.js"></script>
-
-        <script>
-            function acceptCookies() {
-                localStorage.setItem('cookiesAccepted', 'true');
-                closeCookieBanner();
-            }
-
-            function closeCookieBanner() {
-                document.getElementById('cookie-banner').classList.remove('show');
-            }
-
-            window.addEventListener('load', function () {
-                if (!localStorage.getItem('cookiesAccepted')) {
-                    setTimeout(function () {
-                        document.getElementById('cookie-banner').classList.add('show');
-                    }, 2000);
-                }
-            });
-        </script>
 
 </body>
 
