--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creaty.</title>
+    <title>Creaty | Digital & Social Media Agency in Mauritius | Community Management</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Creaty is a premier Digital & Social Media Agency in Mauritius. Professional Community Management, Graphic Design, and Brand Strategy for SMEs and established brands.">
+    <meta name="keywords"
+        content="digital agency mauritius, social media management mauritius, community management, graphic design mauritius, brand strategy, marketing agency mauritius">
+    <meta name="author" content="Creaty - Creativfolio Ltd">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://creaty.mu/">
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://creaty.mu/">
+    <meta property="og:title" content="Creaty | Digital & Social Media Agency Mauritius">
+    <meta property="og:description"
+        content="Transform your digital presence with Creaty. Professional Community Management & Graphic Design in Mauritius.">
+    <meta property="og:image" content="https://creaty.mu/images/og-image.jpg">
+    <meta property="og:locale" content="en_MU">
+    <meta property="og:site_name" content="Creaty">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Creaty | Digital Agency Mauritius">
+    <meta name="twitter:description" content="Professional Community Management & Graphic Design in Mauritius">
+    <meta name="twitter:image" content="https://creaty.mu/images/og-image.jpg">
 
     <script>
         document.documentElement.classList.remove('no-js');
         document.documentElement.classList.add('js');
     </script>
+
+    <!-- DNS Prefetch for Performance -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="dns-prefetch" href="//cdn.dribbble.com">
 
     <!-- CSS
     ================================================== -->
@@ -27,7 +57,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,700&display=swap"
         rel="stylesheet">
@@ -192,6 +222,135 @@
         }
     </style>
 
+    <!-- Schema.org Structured Data - LocalBusiness -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "@id": "https://creaty.mu/#organization",
+        "name": "Creaty",
+        "alternateName": "Creaty Digital Agency",
+        "description": "Premier Digital & Social Media Agency in Mauritius specializing in Community Management and Graphic Design",
+        "url": "https://creaty.mu",
+        "logo": "https://creaty.mu/images/creaty.logo.svg",
+        "image": "https://creaty.mu/images/og-image.jpg",
+        "email": "support@creaty.com",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Port Louis",
+            "addressCountry": "MU"
+        },
+        "priceRange": "$$",
+        "areaServed": {
+            "@type": "Country",
+            "name": "Mauritius"
+        },
+        "sameAs": [
+            "https://www.facebook.com/creaty",
+            "https://www.instagram.com/creaty",
+            "https://www.linkedin.com/company/creaty"
+        ],
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Digital Services",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Email Marketing & Brand Authority Pack",
+                        "description": "Professional email marketing with domain setup, newsletter design, and campaign management",
+                        "provider": {"@id": "https://creaty.mu/#organization"}
+                    },
+                    "price": "18500",
+                    "priceCurrency": "MUR",
+                    "priceValidUntil": "2025-12-31"
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Social Media Management Pack",
+                        "description": "Complete social media management for established brands",
+                        "provider": {"@id": "https://creaty.mu/#organization"}
+                    },
+                    "price": "17000",
+                    "priceCurrency": "MUR"
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "The Launchpad: Startup Foundation Pack",
+                        "description": "Complete brand identity and digital presence for startups",
+                        "provider": {"@id": "https://creaty.mu/#organization"}
+                    },
+                    "price": "35000",
+                    "priceCurrency": "MUR"
+                }
+            ]
+        }
+    }
+    </script>
+
+    <!-- Schema.org Structured Data - FAQPage -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "Why should I hire an agency instead of doing it myself?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Social media and digital strategy require more than just posting a photo. It involves graphic design, copywriting, data analysis, and staying updated with ever-changing algorithms. By hiring Creaty, you gain a professional team and save hours of work, allowing you to focus entirely on running your business."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How long does it take to see real results?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Digital growth is a marathon, not a sprint. While you will see an immediate improvement in your brand's look and feel, significant results in engagement and conversions typically take 3 to 6 months of consistent strategy. We provide monthly reports so you can track the progress."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Will I own my accounts and digital assets?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Absolutely. This is one of our core values. Unlike some agencies, we ensure that you remain the primary owner of your social media profiles, domain names, and professional emails. Your success and your assets stay in your hands."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Do you offer custom packages for small businesses?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes. We understand that every business is at a different stage. While we have standard service tiers, we can tailor our Digital & Social Media solutions to fit your specific goals and budget."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What kind of content will you create for my brand?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We create a mix of high-quality graphics, professional videos (Reels/TikToks), and compelling captions tailored to your brand's voice. Everything is planned in advance through a content calendar that you get to review and approve."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How do we communicate and stay in touch?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Transparency is key for us. We typically set up a dedicated communication channel (like WhatsApp or Email) and hold monthly strategy meetings to review Performance Reports."
+                }
+            }
+        ]
+    }
+    </script>
+
 </head>
 
 
@@ -249,7 +408,7 @@
 
         <!-- # site-content
         ================================================== -->
-        <section id="content" class="s-content">
+        <main id="content" class="s-content" role="main">
 
 
             <!-- intro
@@ -503,11 +662,11 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide s-about__screen-slide">
                                     <img src="https://cdn.dribbble.com/userupload/37375248/file/original-9953fa3a7b437f7f0289437077b119a7.png?resize=752x564&vertical=center"
-                                        alt="Creaty Advantage Image 1">
+                                        alt="Creaty Advantage Image 1" loading="lazy">
                                 </div>
                                 <div class="swiper-slide s-about__screen-slide">
                                     <img src="https://cdn.dribbble.com/userupload/43115879/file/original-a5073467206f595e552fffbb124acb3c.webp?resize=1024x768&vertical=center"
-                                        alt="Creaty Advantage Image 2">
+                                        alt="Creaty Advantage Image 2" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -1087,7 +1246,7 @@
 
 
 
-        </section> <!-- end s-content -->
+        </main> <!-- end s-content -->
 
 
         <!-- # site-footer
