--- a/news.html
+++ b/news.html
@@ -7,7 +7,31 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>News - Creaty.</title>
+    <title>News & Insights | Digital Marketing Tips Mauritius | Creaty</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Stay updated with the latest digital marketing trends, community management tips, and graphic design insights for Mauritian businesses. Expert advice from Creaty Agency.">
+    <meta name="keywords"
+        content="digital marketing tips mauritius, social media trends, community management, graphic design insights, mauritius business">
+    <meta name="author" content="Creaty - Creativfolio Ltd">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://creaty.mu/news.html">
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://creaty.mu/news.html">
+    <meta property="og:title" content="News & Insights | Creaty Digital Agency">
+    <meta property="og:description" content="Latest digital marketing trends and tips for Mauritian businesses.">
+    <meta property="og:image" content="https://creaty.mu/images/og-image.jpg">
+    <meta property="og:locale" content="en_MU">
+    <meta property="og:site_name" content="Creaty">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="News & Insights | Creaty">
+    <meta name="twitter:description" content="Latest digital marketing trends and tips for Mauritian businesses.">
+    <meta name="twitter:image" content="https://creaty.mu/images/og-image.jpg">
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -18,6 +42,7 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
+
 
     <style>
         .s-blog {
