--- a/legal.html
+++ b/legal.html
@@ -7,7 +7,14 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Terms & Conditions - Creaty.</title>
+    <title>Terms & Conditions | Creaty Digital Agency Mauritius</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Terms and Conditions for Creaty digital agency services. Learn about our policies, privacy, and intellectual property rights. Operated by Creativfolio Ltd in Mauritius.">
+    <meta name="author" content="Creaty - Creativfolio Ltd">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://creaty.mu/legal.html">
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -18,6 +25,7 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
+
 
     <style>
         .s-legal {
